fixed spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,7 +12,7 @@
   }
 
   p {
-    @apply font-secondary tracking-wider;
+    @apply font-primary tracking-wider;
   }
 
   a,
